--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@ body {
 
 h1 {
   margin: 0;
-  font-family: 'Lobster', cursive;  
+  font-family: 'Lobster', cursive;
   font-weight: normal;
   font-size: 2rem;
 }
@@ -38,7 +38,7 @@ header {
 #map {
   flex: 2;
   height: calc(100vh - 3rem);
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 @media screen and (max-width: 600px) {
@@ -99,5 +99,21 @@ select {
   background: #286090;
 }
 
+.delete-btn {
+  margin-left: 10px;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  font-size: 12px;
+  background: #C05F5F;
+  border: 0;
+  color: #fff;
+}
 
+.delete-btn:hover {
+  background: #AA4242;
+}
 
+.delete-btn:active {
+  background: #902828;
+}
